<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ViewFlipper
        android:id="@+id/ViewFlipper01"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/home_page_1" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:text="@string/flipper_content_1"
                android:layout_centerInParent="true">
            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_page_2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:text="@string/flipper_content_2" >
            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_page_3"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:text="@string/flipper_content_3" >
            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_page_4"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:text="@string/flipper_content_4" >
            </TextView>

        </RelativeLayout>

    </ViewFlipper>

    <RelativeLayout
        android:id="@+id/RelativeLayout03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingBottom="30dp">

        <LinearLayout
            android:id="@+id/buttonLayerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:clickable="false">

            <Button
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginLeft="20dp"
                style="@style/btnStyleBeige"
                android:layout_marginRight="10dp"
                android:onClick="register"/>

            <Button
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/login"
                android:layout_marginEnd="50dp"
                style="@style/btnStyleSeagull"
                android:layout_marginLeft="10dp"
                android:onClick="login"/>


        </LinearLayout>


    </RelativeLayout>

</FrameLayout>